# homelab-llm

./: .gitignore  .gitmodules  AGENTS.md  AIDER.md  APPLE_MLX_VLLM_GPTOSS_RUNTIME_REVIEW_2026-03-13.md  ARCHITECTURE.md  BACKLOG.md  CONSTRAINTS.md  CURRENT_TASK.md  Codex_implementation_spec.md  DESIGN_STATUS.md  DEV_CONTRACT.md  DIAGNOSTICS.md  DOCS_CONTRACT.md  EVALUATION_FEB_2026.md  FAST_LANE_GPT_OSS_VLLM_METAL_REVIEW_PACK_2026-03-15.md  FAST_LANE_VLLM_METAL_INCIDENT_REVIEW_PACK_2026-03-15.md  FAST_LLMSTER_8126_CUTOVER_REPORT_2026-03-18.md  GPT_OSS_20B_CONSTRAINED_CONTRACT_REVIEW_PACK_2026-03-15.md  GPT_OSS_20B_OPENCODE_CALLER_FACING_PILOT_REVIEW_PACK_2026-03-16.md  GPT_OSS_20B_VS_120B_AB_VERIFICATION_REVIEW_PACK_2026-03-15.md  GPT_OSS_8120_RESPONSES_STORE_REVIEW_PACK_2026-03-15.md  GPT_OSS_FAST_LANE_EXPERIMENTAL_VALIDATION_REPORT_2026-03-15.md  GPT_OSS_RESPONSES_FIRST_AB_COMPARISON_REVIEW_PACK_2026-03-15.md  INCIDENT_FLOW.md  LITELLM_GPTOSS20B_ENFORCEMENT_INVESTIGATION_REPORT_2026-03-16.md  LITELLM_GPTOSS20B_EXPERIMENTAL_LANE_SOAK_REPORT_2026-03-17.md  LITELLM_GPTOSS20B_NOOP_TOOL_CAUSAL_ISOLATION_REPORT_2026-03-17.md  MAIN_8101_CLOSEOUT_REPORT_2026-03-18.md  MAIN_8101_STRUCTURED_OUTPUT_PROTOCOL_VALIDATION_REPORT_2026-03-18.md  MAIN_SHADOW_8123_HERMES_RETRY_REPORT_2026-03-18.md  MLXCTL_TEAM_LANE_SWAP_INSTRUCTIONS.md  NOW.md  OPENCODE_NATIVE_CONFIG_FOLLOWUP_REPORT_2026-03-16.md  OPENCODE_PHASE_A_LANE_INCIDENT_REPORT_2026-03-12.md  OPENCODE_PLANNING_INCIDENT_REPORT_2026-03-11.md  OPTILLM_MLX_BACKEND_PATCH.md  OPTILLM_MLX_BACKEND_TESTING.md  OPTIMIZATION_PLAN.md  README.md  (+14 more)
layer-data/vector-db/: AGENTS.md  ARCHITECTURE.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  TASKS.md  pyproject.toml
layer-data/vector-db/app/: embed.py  ingest.py  main.py
layer-data/vector-db/docs/: README.md
layer-data/vector-db/eval/: query_pack.manuals.v1.jsonl  query_pack.v1.jsonl
layer-data/vector-db/launchd/: com.bebop.memory-api-main.plist  com.bebop.memory-backup-nightly.plist  com.bebop.pgvector-main.plist
layer-data/vector-db/scripts/: build_codex_history_pilot.py  deploy_studio.sh  run_ingest.sh
layer-inference/optillm-local/: AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  TASKS.md  pyproject.toml
layer-inference/optillm-local/config/: env.example  optillm_mlx_patch_config.example.json
layer-inference/optillm-local/runtime/: sitecustomize.py
layer-inference/optillm-local/scripts/: bootstrap_mlx_optillm_workspace.sh  smoke-test.sh  smoke_decode.py
layer-inference/optillm-local/systemd/: optillm-local.service
layer-inference/optillm-local/tests/: test_optillm_decoding.py  test_viability_gate.py
layer-interface/voice-gateway/: AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  Containerfile.wrapper-proof  DEMO.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  TASKS.md  pyproject.toml
layer-interface/voice-gateway/config/: voices.example.json
layer-interface/voice-gateway/registry/: README.md  tts_models.jsonl
layer-interface/voice-gateway/scripts/: try-voice.sh
layer-interface/voice-gateway/tests/: test_api_contract.py  test_cli.py  test_voice_config.py
layer-tools/mcp-tools/web-fetch/: AGENTS.md  ARCHITECTURE.md  README.md  RUNBOOK.md  pyproject.toml  web_fetch_mcp.py
services/docs-mcp/: ARCHITECTURE.md  CONSTRAINTS.md  RUNBOOK.md  SERVICE_SPEC.md  docs_mcp.py  pyproject.toml
services/docs-mcp/launchd/: com.bebop.docs-mcp-main.plist
services/docs-mcp/scripts/: deploy_studio.sh  ensure_docs_mcp_bearer_token.sh  install_docs_mcp_firewall.sh  manual_lookup.py  stage_launchd_plists.sh  studio_install.sh
services/docs-mcp/tests/: test_docs_mcp.py
services/litellm-orch/: AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  chatgpt5_adapter.py  pyproject.toml
services/litellm-orch/config/: env.example  gpt_request_defaults.py  harmony_guardrail.py  llmster_toolcall_guardrail.py  prompt_guardrail.py  responses_contract_guardrail.py  router.yaml  task_json_guardrail.py  transcribe_guardrail.py  transcribe_utils.py  youtube_summary_guardrail.py
services/litellm-orch/docs/: known-issues.md  task-youtube-summary.md
services/litellm-orch/prompts/: task-json.prompt  task-transcribe-vivid.prompt  task-transcribe.prompt  task-youtube-summary.prompt
services/litellm-orch/scripts/: health-check.sh  run-dev.sh  run-service.sh  smoke-test.sh
services/litellm-orch/tests/: test_chatgpt5_adapter.py  test_chatgpt_alias_contract.py  test_gpt_request_defaults.py  test_harmony_guardrail.py  test_llmster_toolcall_guardrail.py  test_qwen_toolcall_posthook.py  test_responses_contract_guardrail.py  test_router_drop_params.py  test_task_json_guardrail.py  test_transcribe_baseline.py  test_youtube_summary_guardrail.py
services/media-fetch-mcp/: AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  media_fetch_mcp.py  pyproject.toml
services/media-fetch-mcp/eval/: README.md  query_pack.web.v1.jsonl
services/media-fetch-mcp/tests/: test_media_fetch_mcp.py
services/omlx-runtime/: ARCHITECTURE.md  RUNBOOK.md  SERVICE_SPEC.md  pyproject.toml
services/omlx-runtime/fixtures/: README.md  phase3_fixture_specs.json
services/omlx-runtime/scripts/: phase3_live_validate.py
services/omlx-runtime/tests/: test_client.py
services/orchestration-cockpit/: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  TASKS.md  langgraph.json  pyproject.toml
services/orchestration-cockpit/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
services/orchestration-cockpit/artifacts/: README.md
services/tiny-agents/: AGENTS.md  CONSTRAINTS.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  TASKS.md  pyproject.toml
services/vector-db/: ARCHITECTURE.md  CONSTRAINTS.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  pyproject.toml
services/voice-gateway/: AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  Containerfile.runtime-proof  DEMO.md  README.md  RUNBOOK.md  SERVICE_SPEC.md  pyproject.toml
(+909 files in other folders)
