[project]
name = "litellm-orch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "litellm==1.80.11",
    "pyyaml==6.0.3",
    "uvicorn[standard]==0.40.0",
]

[tool.uv]
prerelease = "allow"
