[project]
name = "optillm-local"
version = "0.1.0"
description = "OptiLLM local inference service (Orin)"
requires-python = ">=3.10"
dependencies = [
  "optillm @ git+https://github.com/algorithmicsuperintelligence/optillm.git@5211f50454a666e98a63d9203e1e6adb977a76fa",
]

[project.scripts]
optillm-local = "optillm.server:main"

[tool.uv]
managed = true
