[project]
name = "voice-gateway"
version = "0.1.0"
description = "Phase 1 localhost XTTS-v2 TTS wrapper contract for the Orin"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
voice-gateway = "voice_gateway.cli:main"
voice-gateway-service = "voice_gateway.service:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
