[project]
name = "docs-mcp"
version = "0.1.0"
description = "Studio-local MCP service for curated document library ingest and evidence retrieval"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "pypdf>=6.0.0",
]

[project.scripts]
docs-mcp = "docs_mcp:main"
