[project]
name = "litellm-orch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.124.4",
    "httpx==0.28.1",
    "litellm[proxy]==1.83.4",
    "prisma>=0.15.0",
    "prometheus-client==0.20.0",
    "pyyaml==6.0.3",
    "uvicorn[standard]==0.33.0",
    "youtube-transcript-api==1.2.4",
]

[tool.uv]
prerelease = "allow"
