[project]
name = "media-fetch-mcp"
version = "0.1.0"
description = "Localhost MCP backend for media retrieval tools"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "readability-lxml>=0.8.1",
  "selectolax>=0.3.17",
  "trafilatura>=1.9.0",
  "youtube-transcript-api==1.2.4",
]

[project.scripts]
media-fetch-mcp = "media_fetch_mcp:main"
