[project]
name = "omlx-runtime-client"
version = "0.1.0"
description = "Thin repo-owned ingress client for the specialized oMLX runtime plane"
readme = "RUNBOOK.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
