[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestration-cockpit"
version = "0.1.0"
description = "Local LangGraph operator cockpit prototype for specialized-runtime routing"
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=1.0.1,<2",
  "langgraph>=1.0.1,<2",
  "omlx-runtime-client"
]

[tool.uv.sources]
omlx-runtime-client = { path = "../omlx-runtime", editable = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
