[project]
name = "homelab-tiny-agents"
version = "0.1.0"
description = "Local TinyAgents orchestration layer for LiteLLM + MCP tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "mcp>=1.0.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
tiny-agents = "homelab_tiny_agents.cli:main"
tiny-agents-service = "homelab_tiny_agents.service:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
