[project]
name = "vector-db-main"
version = "0.2.0"
description = "Studio main retrieval service (Elastic primary, pgvector rollback)"
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=9.2.0,<10",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "numpy>=2.0.0",
  "sentence-transformers>=3.0.0",
  "haystack-ai>=2.12.0",
  "pgvector-haystack>=3.0.0",
  "pypdf>=5.0.0",
  "einops>=0.8.0",
  "ir-measures==0.4.3",
  "pytrec-eval-terrier==0.5.10",
]

[tool.uv]
package = false
