[project]
name = "web-fetch"
version = "0.1.0"
description = "MCP stdio tool: fetch + clean HTML"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "trafilatura>=1.9.0",
  "readability-lxml>=0.8.1",
  "selectolax>=0.3.17",
  "mcp>=1.0.0"
]

[project.scripts]
web-fetch-mcp = "web_fetch_mcp:main"
